[package]
name = "abc192"
version = "0.1.0"
authors = ["root <root@silviaseDESTKTOP.localdomain>"]
edition = "2018"

# dependencies added to new project
[dependencies]
num = "0.3.0"
ndarray = "0.13.1"
nalgebra = "0.22.0"
regex = "1.3.9"
lazy_static = "1.4.0"
itertools = "0.9.0"
itertools-num = "0.1.3"
bitset-fixed = "0.1.0"
proconio = { version = "0.4.1", features = ["derive"] }
text_io = "0.1.8"
whiteread = "0.5.0"
rustc-hash = "1.1.0"
ac-library-rs = {git = "https://github.com/rust-lang-ja/ac-library-rs.git"}

[profile.release]
lto = true
panic = 'abort'
